# earcut-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: demo.py
earcut/: __init__.py
src/earcut/: __init__.py  utils_3d.py
tests/: test_3d.py  test_fixtures.py  test_simple.py
