[tool.poetry]
name = "earcut-py"
version = "0.3.0"
description = "A pure Python port of the Earcut polygon triangulation library."
authors = [
    "MIERUNE Inc. <info@mierune.co.jp>",
    "Taku Fukada <naninunenor@gmail.com>",
]
license = "ISC"
readme = "README.md"
packages = [{include = "earcut"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1"
pytest = ">=7.4,<9.0"
ruff = "^0.1"
pyright = "^1.1"
numpy = "^1.26"
matplotlib = "^3.8"
seaborn = "^0.13"

[tool.ruff]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ['earcut']